Updates content cards and image banner block

--- a/web/app/themes/kleanhub/package.json
+++ b/web/app/themes/kleanhub/package.json
@@ -21,5 +21,9 @@
     "laravel-vite-plugin": "^1.2.0",
     "tailwindcss": "^4.0.9",
     "vite": "^6.2.0"
+  },
+  "dependencies": {
+    "jquery": "^3.7.1",
+    "slick-carousel": "^1.8.1"
   }
 }
