--- a/web/app/themes/kleanhub/package.json
+++ b/web/app/themes/kleanhub/package.json
@@ -20,7 +20,8 @@
     "@tailwindcss/vite": "^4.0.9",
     "laravel-vite-plugin": "^1.2.0",
     "tailwindcss": "^4.0.9",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-static-copy": "^3.1.4"
   },
   "dependencies": {
     "jquery": "^3.7.1",
